--- a/modules/life_contract/locale/fr_FR.po
+++ b/modules/life_contract/locale/fr_FR.po
@@ -50,6 +50,6 @@ msgctxt "view:contract:"
 msgid "Extension Life"
 msgstr "Prévoyance"
 
-msgctxt "view:ins_contract.covered_element:"
+msgctxt "view:contract.covered_element:"
 msgid "Covered Person"
 msgstr "Personne Couverte"
