--- a/modules/claim/locale/fr_FR.po
+++ b/modules/claim/locale/fr_FR.po
@@ -514,27 +514,27 @@ msgctxt "field:contract.service,multi_level_view:"
 msgid "Indemnifications"
 msgstr "Indemnisations"
 
-msgctxt "field:ins_contract.expense,create_date:"
+msgctxt "field:expense,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_contract.expense,create_uid:"
+msgctxt "field:expense,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_contract.expense,id:"
+msgctxt "field:expense,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_contract.expense,rec_name:"
+msgctxt "field:expense,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_contract.expense,write_date:"
+msgctxt "field:expense,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_contract.expense,write_uid:"
+msgctxt "field:expense,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -594,7 +594,7 @@ msgctxt "model:claim.loss,name:"
 msgid "Loss"
 msgstr "Préjudice"
 
-msgctxt "model:ins_contract.expense,name:"
+msgctxt "model:expense,name:"
 msgid "Expense"
 msgstr "Frais"
 
