--- a/modules/insurance_contract/locale/fr_FR.po
+++ b/modules/insurance_contract/locale/fr_FR.po
@@ -777,43 +777,43 @@ msgctxt "field:ins_product.request_finder,tmp_0:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "field:party.customer,create_date:"
+msgctxt "field:customer,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:party.customer,create_date_:"
+msgctxt "field:customer,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:party.customer,create_uid:"
+msgctxt "field:customer,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:party.customer,id:"
+msgctxt "field:customer,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:party.customer,must_expand_tree:"
+msgctxt "field:customer,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:party.customer,party:"
+msgctxt "field:customer,party:"
 msgid "Party"
 msgstr "Acteur"
 
-msgctxt "field:party.customer,rec_name:"
+msgctxt "field:customer,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:party.customer,reference:"
+msgctxt "field:customer,reference:"
 msgid "Reference"
 msgstr "Référence"
 
-msgctxt "field:party.customer,write_date:"
+msgctxt "field:customer,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:party.customer,write_uid:"
+msgctxt "field:customer,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -913,7 +913,7 @@ msgctxt "model:ir.ui.menu,name:menu_renew_contract"
 msgid "Renew Contracts"
 msgstr "Renouvellement"
 
-msgctxt "model:party.customer,name:"
+msgctxt "model:customer,name:"
 msgid "Customer"
 msgstr "Client"
 
