--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -304,39 +304,39 @@ msgctxt "field:benefit-extra_data,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.benefit-loss_desc,benefit:"
+msgctxt "field:benefit-loss.description,benefit:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "field:ins_product.benefit-loss_desc,create_date:"
+msgctxt "field:benefit-loss.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.benefit-loss_desc,create_date_:"
+msgctxt "field:benefit-loss.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.benefit-loss_desc,create_uid:"
+msgctxt "field:benefit-loss.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.benefit-loss_desc,id:"
+msgctxt "field:benefit-loss.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.benefit-loss_desc,loss_desc:"
+msgctxt "field:benefit-loss.description,loss_desc:"
 msgid "Loss Desc"
 msgstr "Type de Préjudice"
 
-msgctxt "field:ins_product.benefit-loss_desc,rec_name:"
+msgctxt "field:benefit-loss.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.benefit-loss_desc,write_date:"
+msgctxt "field:benefit-loss.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.benefit-loss_desc,write_uid:"
+msgctxt "field:benefit-loss.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3276,7 +3276,7 @@ msgctxt "model:benefit-extra_data,name:"
 msgid "Relation between Benefit and Complementary Data"
 msgstr "Relation entre Prestation et Données Complémentaires"
 
-msgctxt "model:ins_product.benefit-loss_desc,name:"
+msgctxt "model:benefit-loss.description,name:"
 msgid "Benefit Loss Desc Relation"
 msgstr "Relation Prestation Descripteur de Préjudice"
 
