Renaming ins_product.event_desc with benefit.event.description

--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -1405,51 +1405,51 @@ msgctxt "field:ins_product.eligibility_rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.event_desc,code:"
+msgctxt "field:benefit.event.description,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:ins_product.event_desc,company:"
+msgctxt "field:benefit.event.description,company:"
 msgid "Company"
 msgstr "Société"
 
-msgctxt "field:ins_product.event_desc,create_date:"
+msgctxt "field:benefit.event.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.event_desc,create_date_:"
+msgctxt "field:benefit.event.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.event_desc,create_uid:"
+msgctxt "field:benefit.event.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.event_desc,id:"
+msgctxt "field:benefit.event.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.event_desc,loss_descs:"
+msgctxt "field:benefit.event.description,loss_descs:"
 msgid "Loss Descriptions"
 msgstr "Types de Préjudice Couverts"
 
-msgctxt "field:ins_product.event_desc,must_expand_tree:"
+msgctxt "field:benefit.event.description,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.event_desc,name:"
+msgctxt "field:benefit.event.description,name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.event_desc,rec_name:"
+msgctxt "field:benefit.event.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.event_desc,write_date:"
+msgctxt "field:benefit.event.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.event_desc,write_uid:"
+msgctxt "field:benefit.event.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3353,7 +3353,7 @@ msgctxt "model:ins_product.eligibility_rule,name:"
 msgid "Eligibility Rule"
 msgstr "Eligibilite"
 
-msgctxt "model:ins_product.event_desc,name:"
+msgctxt "model:benefit.event.description,name:"
 msgid "Event Desc"
 msgstr "Descripteur d'Evénement"
 
@@ -4624,7 +4624,7 @@ msgctxt "view:ins_product.eligibility_rule:"
 msgid "Eligibility rule"
 msgstr "Eligibilite"
 
-msgctxt "view:ins_product.event_desc:"
+msgctxt "view:benefit.event.description:"
 msgid "Event Descriptor"
 msgstr "Descripteur d'Evénement"
 
